style: Minor padding fixes on mobile

--- a/src/app/pages/report-viewer/report-viewer.scss
+++ b/src/app/pages/report-viewer/report-viewer.scss
@@ -201,7 +201,7 @@
     width: 100%;
     max-width: 100%;
     height: 100%;
-    padding: tokens.spacing(md);
+    padding: tokens.spacing(lg);
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
@@ -225,7 +225,7 @@
     display: none;
     overflow-y: auto;
     overflow-x: hidden;
-    padding: tokens.spacing(md);
+    padding: tokens.spacing(lg);
     box-sizing: border-box;
 
     &.show-mobile {
